--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <div>
+    <div class="quote">
         <blockquote></blockquote>
         <p></p>
+        <button>Change quote</button>
+    </div> 
+    <div class="loader">
+        <img src="assets/Rolling-1s-200px.gif" alt="Loading...">
     </div>
 </body>
 </html>
