--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="quote">
         <blockquote></blockquote>
+        <img class="author" src="" alt="Picture of the author of the quotation">
         <p></p>
         <button>Change quote</button>
     </div> 
